--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,6 @@ export QT_SELECT := qt5
 override_dh_auto_configure:
 	qmake
 
-override_dh_clean:
+override_dh_auto_clean:
 	rm -f src/virtualkeyboard/layouts.qrc
 	dh_clean
