--- a/debian/control
+++ b/debian/control
@@ -5,11 +5,14 @@ Uploaders: Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: debhelper (>= 9),
                libhunspell-dev,
-               pkg-config,
-               qt5-qmake,
-               qtbase5-dev (>= 5.7),
-               qtbase5-private-dev (>= 5.7),
-               qtdeclarative5-dev (>= 5.7)
+               libqt5svg5-dev (>= 5.7.1~),
+               pkg-kde-tools,
+               qml-module-qt-labs-folderlistmodel,
+               qml-module-qtquick-layouts,
+               qml-module-qttest, qml-module-qtquick-window2,
+               qtbase5-dev (>= 5.7.1+dfsg~),
+               qtbase5-private-dev (>= 5.7.1+dfsg~),
+               qtdeclarative5-dev (>= 5.7.1~)
 Standards-Version: 3.9.8
 Section: libs
 Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
