--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Build-Depends: debhelper (>= 9),
                pkg-kde-tools,
                qml-module-qt-labs-folderlistmodel,
                qml-module-qtquick-layouts,
-               qml-module-qttest, qml-module-qtquick-window2,
+               qml-module-qtquick-window2,
+               qml-module-qttest,
                qtbase5-dev (>= 5.7.1+dfsg~),
                qtbase5-private-dev (>= 5.7.1+dfsg~),
                qtdeclarative5-dev (>= 5.7.1~)
