--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: debhelper (>= 9),
                qml-module-qttest,
                qtbase5-dev (>= 5.7.1+dfsg~),
                qtbase5-private-dev (>= 5.7.1+dfsg~),
-               qtdeclarative5-dev (>= 5.7.1~)
+               qtdeclarative5-dev (>= 5.7.1~),
+               xvfb
 Standards-Version: 3.9.8
 Section: libs
 Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
