Split the files in it's packages.

--- a/debian/control
+++ b/debian/control
@@ -21,22 +21,33 @@ Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtvirtualkeyboard.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtvirtualkeyboard.git
 
-Package: qtvirtualkeyboard
+Package: qtvirtualkeyboard-plugin
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Qt virtual keyboard
  The Qt Virtual Keyboard project provides an input framework and
  reference keyboard frontend for Qt 5 on Linux Desktop/X11, Windows
- Desktop, and Boot2Qt targets
+ Desktop, and Boot2Qt targets.
+ .
+ This package contains the virtual keyboard plugin.
 
-Package: qtvirtualkeyboard-dev
+Package: qml-module-qtquick-virtualkeyboard
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Qt virtual keyboard - developer files
+Depends: ${misc:Depends}, ${shlibs:Depends}, qtvirtualkeyboard-plugin (= ${binary:Version})
+Description: Qt virtual keyboard - QML module
  The Qt Virtual Keyboard project provides an input framework and
  reference keyboard frontend for Qt 5 on Linux Desktop/X11, Windows
  Desktop, and Boot2Qt targets.
  .
- This package contains the files needed to develop against Qt Virtual
- Keyboard and examples for working with it.
+ This package contains the QML module.
+
+Package: qtvirtualkeyboard5-examples
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}, qtvirtualkeyboard-plugin (= ${binary:Version}), qml-module-qtquick-virtualkeyboard (= ${binary:Version})
+Description: Qt virtual keyboard examples
+ The Qt Virtual Keyboard project provides an input framework and
+ reference keyboard frontend for Qt 5 on Linux Desktop/X11, Windows
+ Desktop, and Boot2Qt targets.
+ .
+ This package contains examples of using the virtual keyboard.
