--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper (>= 9),
                qtbase5-dev (>= 5.7.1+dfsg~),
                qtbase5-private-dev (>= 5.7.1+dfsg~),
                qtdeclarative5-dev (>= 5.7.1~),
+               xauth,
                xvfb
 Standards-Version: 3.9.8
 Section: libs
