Add pkg-config as a build dependency.

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
 Build-Depends: debhelper (>= 9),
                libhunspell-dev,
                libqt5svg5-dev (>= 5.7.1~),
+               pkg-config,
                pkg-kde-tools,
                qml-module-qt-labs-folderlistmodel,
                qml-module-qtquick-layouts,
