--- a/debian/control
+++ b/debian/control
@@ -20,8 +20,8 @@ Build-Depends: debhelper (>= 11),
 Standards-Version: 4.1.3
 Section: libs
 Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtvirtualkeyboard.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtvirtualkeyboard.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtvirtualkeyboard.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtvirtualkeyboard
 
 Package: qml-module-qtquick-virtualkeyboard
 Section: libdevel
