--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ export QT_SELECT := qt5
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- QT_BUILD_PARTS+=tests CONFIG+="lang-all handwriting"
+	dh_auto_configure -- QT_BUILD_PARTS+=tests CONFIG+="lang-all handwriting arrow-key-navigation"
 
 override_dh_auto_build-indep:
 	dh_auto_build -- docs
