--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends-Indep: qtbase5-doc-html (>= 5.11.2+dfsg~) <!nodoc>,
                      qttools5-dev-tools (>= 5.11.2~) <!nodoc>
 Standards-Version: 4.1.4
 Section: libs
-Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
+Homepage: https://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
 Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtvirtualkeyboard.git
 Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtvirtualkeyboard
 
